--- a/flask_blog/static/main.css
+++ b/flask_blog/static/main.css
@@ -87,10 +87,10 @@ body {
   }
 
     .account-heading{{
-        font-size:19px;
+        font-size:19px!important;
     }}
     @media screen and (min-width: 800px) {{
         .center{{
-            font-size:25px;
+            font-size:25px!important;
         }}
     }}  
