--- a/flask_blog/templates/layout.html
+++ b/flask_blog/templates/layout.html
@@ -15,6 +15,17 @@
     {% else %}
         <title>SocialFlow</title>
     {% endif %}
+    <style>
+    .account-heading{{
+        font-size:19px!important;
+    }}
+    @media screen and (min-width: 800px) {{
+        .account-heading{{
+            font-size:25px!important;
+        }}
+    }}  
+
+    </style>
 </head>
 <body>
     <header class="site-header">
